--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
@@ -58,12 +58,12 @@
         <img src="assets/images/832.gif" alt="Cargando Tareas">
       </div>
 
-      
+
         <!-- Loader de Carga de la Pagina -->
-        <div class="loader-new" *ngIf="loading == 'show' " >          
+        <div class="loader-new" *ngIf="loading == 'show' " >
           <img id="imgload" src="assets/images/745.gif" alt="Cargando Tareas">
         </div>
-      
+
 
             <table id="example" class="table table-striped table-bordered"
                 cellspacing="0" width="100%" style="font-size:15px;" *ngIf="loadTabla1 == true">
@@ -76,6 +76,7 @@
                       <th>Código Interno</th>
                       <th>Código Referencia</th>
                       <th>Tipo Comunicación</th>
+                      <th>Dirección</th>
                       <th>Fecha Creación</th>
                       <th>Fecha Entrega.</th>
                       <th>Institución Remitente</th>
@@ -91,10 +92,13 @@
                   <td style="width:80px">{{ item.codCorrespondenciaEnc }}</td>
                   <td style="width:80px">{{ item.codReferenciaSreci }}</td>
                   <td >{{ item.descTipoDocumento }}</td>
+                  <td style="cursor: help" title="{{ item.descDeptoFuncional }} ">
+                    {{ item.inicialesDeptoFuncional }}
+                  </td>
                   <td >{{ item.fechaIngreso | date :'dd-MMM-yyyy' }}</td>
                   <td >{{ item.fechaMaxEntrega | date :'dd-MMM-yyyy' }}</td>
                   <td style="cursor: help" title="{{ item.perfilInstitucion }} ">
-                      {{ item.descInstitucion }}
+                    {{ item.descInstitucion }}
                   </td>
                   <!-- <td class="cortar">{{ item.descCorrespondenciaEnc }}</td> -->
                   <td > {{ item.nombre1Funcionario }} - {{ item.apellido1Funcionario }} </td>
