--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
@@ -217,7 +217,7 @@
           </div>
 
           <!-- Loader de Carga de la Pagina -->
-          <div class="loader-new" *ngIf="loading_tableIn == 'show' " >          
+          <div class="loader-new" *ngIf="loading_tableIn == 'show' " >
             <img id="imgload" src="assets/images/745.gif" alt="Cargando Tareas">
           </div>
 
@@ -243,6 +243,7 @@
             <th>Direccion Responsable</th>
             <th>Funcionario Responsable</th>
             <th>Fecha Creación</th>
+            <th>Fecha Entrega</th>
             <th>Fecha Finalizado</th>
             <th>Institución Remitente</th>
             <th>Tema / Asunto</th>
@@ -258,6 +259,7 @@
             <td style="cursor:help" title="Nombre: {{ item.descDeptoFuncional }}">{{ item.inicialesDeptoFuncional }}</td>
             <td>{{ item.nombre1Funcionario }} - {{ item.apellido1Funcionario }}</td>
             <td>{{ item.fechaIngreso | date :'dd-MMM-yyyy' }}</td>
+            <td>{{ item.fechaMaxEntrega | date :'dd-MMM-yyyy' }}</td>
             <td>{{ item.fechaFinalizacion | date :'dd-MMM-yyyy' }}</td>
             <td style="cursor:help" title="Nombre: {{ item.perfilInstitucion }}" >{{ item.descInstitucion }}</td>
             <td style="cursor:help" title="Descripción: {{ item.descCorrespondenciaEnc }}">{{ item.temaComunicacion }}</td>
